@@ -1,4 +1,4 @@
 <?php
 
-$_lang['localizator_prop_element'] = 'Snippet, which will be called to output the results of work. Default is "pdoResources".';
+$_lang['localizator_prop_snippet'] = 'Snippet, which will be called to output the results of work. Default is "pdoResources".';
 $_lang['localizator_prop_class'] = 'Object. Default is "modResource"';
