@@ -1,4 +1,4 @@
 <?php
 
-$_lang['localizator_prop_element'] = 'Сниппет, который будет вызываться для вывода результатов работы. По-умолчанию - "pdoResources"';
+$_lang['localizator_prop_snippet'] = 'Сниппет, который будет вызываться для вывода результатов работы. По-умолчанию - "pdoResources"';
 $_lang['localizator_prop_class'] = 'Объект. По-умолчанию - "modResource"';
